# gumby_elf

./: .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  METADATA.in  README.rst  gumby_elf.ll.ini  gumby_elf.ll.json  gumby_elf.sublime-project  lone_elf.py  package.json  pyproject.toml  tox.ini
metadata/: METADATA.in  entry_points.txt
src/: __init__.py  _metadata.py  _mksdist.py  _mkwheel.py  _packing.py  bootstrap_template.py.txt  build_backend.py  cli.py  config.py  core.py  hookspec.py  lowlevel.py  metadata.py  mkwheel.py  packing.py  setup_emulate.py
src/gumby_elf/: cli.py
src/plugins/: lowlevel.py
testing/: test_acceptance.py  test_lowlevel.py  test_metadata.py
